# adam_software

./: README.md  workspace.code-workspace
bag_file/: CMakeLists.txt  package.xml
bag_file/map_file/: nantong.pgm
bag_file/pcd/: nantong.yaml
common/calibration/: CMakeLists.txt  README.md  package.xml
common/car_info/: CMakeLists.txt  package.xml
common/car_info/include/: car_basic_info.h  car_limit_info.h
common/car_info/launch/: car_basic_info.launch  car_info.launch  car_limit_info.launch
common/car_info/params/: car_basic_info.yaml  car_limit_info.yaml
common/car_info/src/: car_basic_info_core.cpp  car_basic_info_node.cpp  car_limit_info_core.cpp  car_limit_info_node.cpp
common/common/: test_0123.rviz
common/msg/adam_msgs/: CMakeLists.txt  README.md  package.xml
common/msg/adam_msgs/msg/: CarBasicInfo.msg  CarLimitInfo.msg  ControlCommand.msg  Lane.msg  LaneStamped.msg  Road.msg  VCU.msg  VCUEPS.msg  VehicleCmd.msg  WayPoint.msg  WayPointStamped.msg  lamp_cmd.msg  pathIntegralTiming.msg  pid.msg  runstop.msg
common/utility/: CMakeLists.txt  package.xml
common/utils/: CMakeLists.txt
control/drive_control/: CMakeLists.txt  README.md  package.xml
control/drive_control_x/: CMakeLists.txt  package.xml
control/drive_control_x/cfg/: PathIntegralParams.cfg
control/drive_control_x/include/drive_control_x/ddp/: ddp.h
control/drive_control_x/include/drive_control_x/path_integral/: adam_plant.h  car_bfs.cuh  car_kinematics.cuh  costs.cu  costs.cuh  debug_kernels.cuh  generalized_linear.cu  generalized_linear.cuh  managed.cuh  mppi.cu  mppi.cuh  mppi_controller.cu  mppi_controller.cuh  neural_net_model.cuh  param_getter.h  run_control_loop.cuh  status_monitor.h
control/drive_control_x/launch/: path_integral_bf.launch  path_integral_nn.launch
control/drive_control_x/src/path_integral/: CMakeLists.txt  adam_plant.cpp  mppi_nodelet.cu  param_getter.cpp  path_integral_main.cu  status_monitor.cpp
control/drive_controller/: CMakeLists.txt  package.xml
control/drive_ethernet/: CMakeLists.txt  Readme.md  package.xml
control/waypoint_following/: CMakeLists.txt  README.md  interface.yaml  package.xml
control/waypoint_following/include/: pure_pursuit.h  pure_pursuit_viz.h
control/waypoint_following/launch/: after_currentpose_path.launch  pure_pursuit.launch
control/waypoint_following/params/: pure_pursuit.yaml
control/waypoint_following/src/: after_currentpose_path.cpp  pure_pursuit_core.cpp  pure_pursuit_node.cpp  pure_pursuit_viz.cpp
control/wf_simulator_f/: CMakeLists.txt  interface.yaml  package.xml
data/bag_tools/: CMakeLists.txt  README.md  package.xml
data/data_recorder/: CMakeLists.txt  README.md  package.xml
driver/can_driver/: CMakeLists.txt  README.md  package.xml
driver/encoder_driver/: CMakeLists.txt  package.xml
driver/encoder_driver/include/encoder_driver/: encoder_driver.h  gpio.h
driver/encoder_driver/launch/: encoder.launch
driver/encoder_driver/params/: encoder_params.yaml
driver/encoder_driver/src/: encoder_driver.cpp  encoder_node.cpp  gpio.cpp
driver/ethernet_viewer/: CMakeLists.txt  README.md  package.xml
driver/imu_driver/: CMakeLists.txt
driver/odom_imu/: CMakeLists.txt
driver/ros_gpio/: CMakeLists.txt  README.md
driver/viedo_stream/: CMakeLists.txt  package.xml
localization/ndt_localization/: CMakeLists.txt  README.md
localization/ndt_localization/include/ndt_localization/: ndt_localization.h
localization/ndt_localization/launch/: ndt_localization.launch  test_localization.launch  test_ndt.launch
localization/ndt_localization/launch/test_0426/: build_smooth_path.launch  build_traj.launch  sensor.launch  test_aview.launch  test_ndt2.launch  test_pursuit.launch
localization/ndt_localization/params/: global.yaml  latest_poses.yaml  test.yaml
localization/ndt_localization/rviz/: test1.rviz
localization/ndt_localization/src/: ndt_localization.cpp
localization/ndt_localization/src/ndt_cpu/: NormalDistributionsTransform.cpp  VoxelGrid.cpp
localization/ndt_localization/trajectories/: 2019-04-27-19-24-54.traj  2019-05-15-17-48-44.traj  2019-05-15-18-22-38.traj  2019-05-15-18-25-51.traj  2019-05-15-18-44-01.traj  2019-05-29-17-05-50.traj  2019-05-29-17-08-58.traj  2019-05-29-17-14-36.traj  2019-05-29-17-17-06.traj  2019-05-29-19-15-25.traj  2019-05-29-21-06-36.traj  2019-05-29-21-12-38.traj  2019-05-30-14-06-10.traj  2019-05-30-14-56-43.traj  2019-05-30-16-23-54.traj  2019-05-30-16-27-22.traj  2019-05-30-16-30-31.traj  2019-05-30-16-37-56.traj  2019-06-06-10-23-02.traj  2019-06-06-11-12-07.traj  2019-09-25-14-47-15.traj  smoothed-2019-04-27-19-24-54.traj  smoothed-2019-05-30-16-20-07.traj
localization/pf_localization/: CMakeLists.txt
map/gen_costmap/: CMakeLists.txt
map/gen_costmap2/: CMakeLists.txt  README.md  package.xml
map/load_vectormap/: CMakeLists.txt  README.md  package.xml
map/load_vectormap/include/: load_vectormap.h  load_vectormap_util.h  map.pb.cc  map.pb.h
map/load_vectormap/launch/: load_vectormap.launch
map/load_vectormap/map/: garageMap  garageMap_v2  testMap_v2  zhiquan  zhiquan.json  zhiquan_v2  zhiquan_v2.json
map/load_vectormap/proto/: map.proto
map/load_vectormap/src/: load_vectormap_core.cpp  load_vectormap_node.cpp  load_vectormap_vis.cpp
map/ndt_map/: CMakeLists.txt  package.xml
planning/global_planning/: CMakeLists.txt  README.md  package.xml
planning/global_planning/include/: global_planning.h
planning/global_planning/launch/: global_planning.launch
planning/global_planning/params/: global_planning.yaml
planning/global_planning/src/: global_planning_core.cpp  global_planning_node.cpp
planning/local_planning/: CMakeLists.txt  README.md  package.xml
planning/local_planning/include/: local_planning.h
planning/local_planning/launch/: local_planning.launch  test_local_gen.launch
planning/local_planning/params/: local_planning.yaml
planning/local_planning/rviz/: rviz.rviz
planning/local_planning/src/: local_planning_core.cpp  local_planning_node.cpp  local_planning_vis.cpp
test_launch/: CMakeLists.txt  package.xml
(+138 files in other folders)
